new look set up

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Green Grocery</title>
+    <link rel="stylesheet" href="Styles/style.css">
 </head>
 <body>
     <h2>Live fish and vegetables</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti eaque molestias, ab nemo quae hic quisquam optio vel quos omnis!</p>
+    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic dicta repellendus velit illo quia saepe totam officiis, aperiam, molestiae ducimus earum quae voluptatem eveniet at minima nisi harum sed. Culpa!</div>
     
 </body>
 </html>
