added 2nd block

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <h2>Live fish and vegetables</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti eaque molestias, ab nemo quae hic quisquam optio vel quos omnis!</p>
     <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic dicta repellendus velit illo quia saepe totam officiis, aperiam, molestiae ducimus earum quae voluptatem eveniet at minima nisi harum sed. Culpa!</div>
+    <h2>Fresh Deshi Chicken</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti eaque molestias, ab nemo quae hic quisquam optio vel quos omnis!</p>
+    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic dicta repellendus velit illo quia saepe totam officiis, aperiam, molestiae ducimus earum quae voluptatem eveniet at minima nisi harum sed. Culpa!</div>
     
 </body>
 </html>
